--- a/src/custom.scss
+++ b/src/custom.scss
@@ -3,10 +3,16 @@
 
 $primary: #17a2b8;
 $btn-border-radius: 0;
+$btn-border-radius-large: 0;
+$btn-border-radius-base:0;
 $input-border-radius: unset;
 
 * {
     outline: none;
+}
+
+.btn-lg {
+    border-radius: 0 !important;
 }
 
 
